--- a/app/globals.css
+++ b/app/globals.css
@@ -13,8 +13,8 @@
 
   --font-body: "Boska", serif;
   --font-family: "Manrope", sans-serif;
-  --font-primary: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    sans-serif;
+  --font-primary:
+    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
 
   --grid-columns: 12;
   --grid-gap: clamp(1rem, 2vw, 2rem);
@@ -115,7 +115,8 @@ h6 {
   z-index: 1000;
   position: fixed;
   background-color: transparent;
-  transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1),
+  transition:
+    transform 0.4s cubic-bezier(0.4, 0, 0.2, 1),
     background-color 0.4s ease;
 }
 
@@ -1191,7 +1192,9 @@ h6 {
   gap: var(--grid-gap);
   row-gap: clamp(2rem, 7vw, 8rem);
   grid-template-columns: repeat(var(--grid-columns), 1fr);
-  grid-template-rows: auto clamp(400px, 65vh, 800px) clamp(400px, 65vh, 800px) auto;
+  grid-template-rows:
+    auto clamp(400px, 65vh, 800px) clamp(400px, 65vh, 800px)
+    auto;
 }
 
 .social-proof__header {
