--- a/legacy/assets/css/main.css
+++ b/legacy/assets/css/main.css
@@ -20,6 +20,7 @@
 * {
   margin: 0;
   padding: 0;
+  list-style: none;
   box-sizing: border-box;
 }
 
@@ -42,6 +43,15 @@ html.lenis body {
 
 .lenis.lenis-scrolling iframe {
   pointer-events: none;
+}
+
+::-webkit-scrollbar {
+  width: 0.8rem;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10rem;
+  background-color: #9d9040;
 }
 
 body {
@@ -1178,11 +1188,9 @@ h6 {
   gap: var(--grid-gap);
   row-gap: clamp(2rem, 7vw, 8rem);
   grid-template-columns: repeat(var(--grid-columns), 1fr);
-  grid-template-rows: auto clamp(400px, 65vh, 800px) clamp(
-      400px,
-      65vh,
-      800px
-    ) auto;
+  grid-template-rows:
+    auto clamp(400px, 65vh, 800px) clamp(400px, 65vh, 800px)
+    auto;
 }
 
 .social-proof__header {
