--- a/legacy/assets/css/about.css
+++ b/legacy/assets/css/about.css
@@ -144,9 +144,14 @@
   }
 
   .about-story__image {
-    grid-row: 2;
-    grid-column: 1 / 13;
-    aspect-ratio: 4 / 3;
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 16 / 9;
+  }
+
+  .about-story__image img {
+    width: 100%;
+    height: 100%;
   }
 
   .about-story__text {
