--- a/app/globals.css
+++ b/app/globals.css
@@ -2642,6 +2642,11 @@ h6 {
 
 .exhibition__image {
   width: 100%;
+  height: 100vh;
+}
+
+.exhibition__image img {
+  width: 100%;
   height: 100%;
 }
 
@@ -2685,6 +2690,10 @@ h6 {
   .exhibition__service-wrapper {
     flex-direction: column;
   }
+
+  .exhibition__image {
+    height: auto;
+  }
 }
 
 .exhibition__who {
@@ -2709,7 +2718,7 @@ h6 {
 
 .exhibition__container-image {
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 .exhibition__container-image img {
@@ -2732,10 +2741,11 @@ h6 {
 .exhibition__container-items {
   display: flex;
   font-weight: 300;
+  max-width: 1200px;
   align-self: flex-end;
   flex-direction: column;
   gap: clamp(1.5rem, 2vw, 2rem);
-  font-size: clamp(1.1rem, 3vw, 2.3rem);
+  font-size: clamp(1.1rem, 3vw, 2.1rem);
 }
 
 .exhibition__container-item {
@@ -2762,7 +2772,7 @@ h6 {
   align-self: flex-start;
   color: var(--color-navy);
   top: clamp(6rem, 12vh, 8rem);
-  font-size: clamp(2.3rem, 8vw, 6rem);
+  font-size: clamp(2.3rem, 8vw, 5rem);
 }
 
 .exhibition__scope-container {
@@ -2992,6 +3002,10 @@ h6 {
     height: auto;
     position: static;
     overflow: visible;
+  }
+
+  .exhibition__container-image {
+    height: auto;
   }
 
   .exhibition__type-card {
