--- a/app/globals.css
+++ b/app/globals.css
@@ -2116,8 +2116,8 @@ h6 {
   position: relative;
   align-items: center;
   gap: var(--grid-gap);
+  background-color: var(--color-cream);
   padding: clamp(2rem, 4vh, 3rem) 2rem;
-  background-color: var(--color-light-gray);
   grid-template-columns: repeat(var(--grid-columns), 1fr);
 }
 
